# opendart

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  XBRL_TEST_RESULTS.md  backup.sql  progress.md  pyproject.toml  test_xbrl_ingestion.py
.sisyphus/: boulder.json
.sisyphus/drafts/: xbrl-docs.md
.sisyphus/notepads/xbrl_ingestion/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: xbrl_ingestion.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_latest_financials_view.py  1af33ea2791c_create_financial_notes.py  CLAUDE.md
data_test/: KOSPI 200 Constituents List - KOSPI 200 Constituents List.csv  sunjin.csv
data_test/xbrl_rev/: entity00855093_2024-12-31.xsd  entity00855093_2024-12-31_cal.xml  entity00855093_2024-12-31_pre.xml
docs/: progress.md  spec.md
scripts/: test_xbrl_download.py
src/opendart/: AGENTS.md  CLAUDE.md  __init__.py  api.py  cli.py  config.py  db.py  models.py  notifications.py  scheduler.py
src/opendart/etl/: CLAUDE.md  __init__.py  companies.py  events.py  financials.py  xbrl.py
tests/: CLAUDE.md  __init__.py  test_companies_ingest.py  test_financials_helpers.py
typings/arelle/: __init__.pyi
web/: .env.example  .env.vercel  README.md  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/api/companies/: route.ts
web/app/api/financials/[corpCode]/: route.ts
web/app/companies/[corpCode]/: page.tsx
web/components/: company-search.tsx  company-table.tsx  financial-table.tsx
web/prisma/: schema.prisma
